--- a/app/index.html
+++ b/app/index.html
@@ -16,132 +16,135 @@
 
       <!-- build:css styles/main.css -->
       <link rel="stylesheet" href="styles/main.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-kit/1.1.0/css/material-kit.min.css" />
+      <link rel="stylesheet" href="styles/material-kit.css">
       <link rel="stylesheet" href="styles/custom.css">
       <!-- endbuild -->
+
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+
       <!-- build:js scripts/vendor/modernizr.js -->
       <script src="/bower_components/modernizr/modernizr.js"></script>
       <!-- endbuild -->
     </head>
     <body ng-controller="commonCtrl as common" class="ng-cloak">
-      <!--[if lt IE 10]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-      <![endif]-->
+    <!--[if lt IE 10]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
 
-      <div class="container">
-        <div class="new-circle-btn">
-          <button
-            ui-sref="custom"
-            type="button"
-            class="btn btn-info"
-            data-toggle="modal"
-            data-target="#area-number"
-            data-type="create-custom-circle"
-            ui-sref-active="active"
-            ng-click="common.setCustom()">
-            Create your own Wheel of Life
-          </button>
-          <button
-            ui-sref="default"
-            type="button"
-            ui-sref-active="active"
-            class="btn btn-info" data-type="show-default"
-            ng-click="common.setDefault()">Show default Wheel of Life</button>
-        </div>
-
-        <div ng-hide="common.formShown">
-          <h2 class="text-center"><strong>Check what your life is about at the moment</strong></h2>
-          <h3 class="subtitle text-center">Don't overthink think it — just click it and save it</h3>
-        </div>
-
-        <div ui-view></div>
-
-        <div class="clearfix"></div>
-
-        <!-- todo hide for /custom form -->
-        <div class="row" ng-hide="common.formShown">
-          <div class="col-xs-12">
-            <div class="export-btns">
-              <button type="button" data-type="jpg-btn" class="btn btn-info btn-block">Save as .JPG</button>
-              <!--<button type="button" class="btn btn-primary hidden">Share on FB</button>
-              <button type="button" class="btn btn-primary hidden">Share on Instagram</button>-->
-            </div>
-          </div>
-        </div>
-      </div> <!-- .container -->
-      <div class="footer fixed-bottom">
-        <p class="center-block text-center">♥ from <a href="http://www.thewebbird.me">thewebbird.me</a></p>
+    <div class="container">
+      <div class="new-circle-btn">
+        <button
+          ui-sref="custom"
+          type="button"
+          class="btn btn-info"
+          data-toggle="modal"
+          data-target="#area-number"
+          data-type="create-custom-circle"
+          ui-sref-active="active"
+          ng-click="common.setCustom()">
+          Create your own Wheel of Life
+        </button>
+        <button
+          ui-sref="default"
+          type="button"
+          ui-sref-active="active"
+          class="btn btn-info" data-type="show-default"
+          ng-click="common.setDefault()">Show default Wheel of Life</button>
       </div>
 
-      <!-- Global Site Tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299149-1"></script>
-      <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments)};
-        gtag('js', new Date());
+      <div ng-hide="common.formShown">
+        <h2 class="text-center"><strong>Check what your life is about at the moment</strong></h2>
+        <h3 class="subtitle text-center">Don't overthink think it — just click it and save it</h3>
+      </div>
 
-        gtag('config', 'UA-107299149-1');
-      </script>
+      <div ui-view></div>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
+      <div class="clearfix"></div>
 
-      <!-- build:js scripts/vendor.js -->
-      <!-- bower:js -->
-      <script src="/bower_components/jquery/dist/jquery.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-      <script src="/bower_components/modernizr/modernizr.js"></script>
-      <!-- endbower -->
-      <!-- endbuild -->
+      <!-- todo hide for /custom form -->
+      <div class="row" ng-hide="common.formShown">
+        <div class="col-xs-12">
+          <div class="export-btns">
+            <button type="button" data-type="jpg-btn" class="btn btn-info btn-block">Save as .JPG</button>
+            <!--<button type="button" class="btn btn-primary hidden">Share on FB</button>
+            <button type="button" class="btn btn-primary hidden">Share on Instagram</button>-->
+          </div>
+        </div>
+      </div>
+    </div> <!-- .container -->
+    <div class="footer fixed-bottom">
+      <p class="center-block text-center">♥ from <a href="http://www.thewebbird.me">thewebbird.me</a></p>
+    </div>
 
-      <!-- build:js scripts/plugins.js -->
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
-      <script src="/node_modules/dom-to-image/dist/dom-to-image.min.js"></script>
-      <!-- endbuild -->
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299149-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments)};
+      gtag('js', new Date());
 
-      <!-- build:js scripts/main.js -->
-      <script src="vendor/material.min.js"></script>
+      gtag('config', 'UA-107299149-1');
+    </script>
 
-      <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-      <!-- <script src="scripts/nouislider.min.js" type="text/javascript"></script> -->
-      <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-      <script src="vendor/material-kit.js" type="text/javascript"></script>
-      <script src="scripts/bundle.js"></script>
-      <!-- endbuild -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
+    <script src="vendor/angular-ui-router.min.js"></script>
 
-      <script src="app.js"></script>
+    <!-- build:js scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
 
-      <script src="common/commonCtrl.js"></script>
-      <script src="common/commonService.js"></script>
+    <!-- build:js scripts/plugins.js -->
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
+    <script src="/node_modules/dom-to-image/dist/dom-to-image.min.js"></script>
+    <!-- endbuild -->
 
-      <script src="directives/error/error-directive.js"></script>
-      <script src="directives/error/errorService.js"></script>
+    <!-- build:js scripts/main.js -->
+    <script src="vendor/material.min.js"></script>
 
-      <script src="directives/circle/circle-directive.js"></script>
-      <script src="directives/circle/circle-body-directive.js"></script>
+    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+    <!-- <script src="scripts/nouislider.min.js" type="text/javascript"></script> -->
+    <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+    <script src="vendor/material-kit.js" type="text/javascript"></script>
+    <script src="scripts/bundle.js"></script>
+    <!-- endbuild -->
 
-      <script src="directives/graph/graph-directive.js"></script>
+    <script src="app.js"></script>
 
-      <script src="default/defaultCtrl.js"></script>
-      <script src="default/defaultService.js"></script>
+    <!-- TODO rename all controllers -->
+    <script src="common/commonCtrl.js"></script>
+    <script src="common/commonService.js"></script>
 
-      <script src="custom/customCtrl.js"></script>
-      <script src="custom/customService.js"></script>
+    <script src="directives/error/error-directive.js"></script>
+    <script src="directives/error/errorService.js"></script>
 
-      <script src="directives/form/category-title-form-directive.js"></script>
+    <script src="directives/circle/circle-directive.js"></script>
+    <script src="directives/circle/circle-body-directive.js"></script>
+
+    <script src="directives/graph/graph-directive.js"></script>
+
+    <script src="default/defaultCtrl.js"></script>
+    <script src="default/defaultService.js"></script>
+
+    <script src="custom/customCtrl.js"></script>
+    <script src="custom/customService.js"></script>
+
+    <script src="directives/form/category-title-form-directive.js"></script>
 
     </body>
   </html>
